# usbg

./: .gitignore  LICENSE  README.md  config.example.json  flake.nix  pyproject.toml
systemd/: usbg-waybar.service
usbg/: __init__.py  app.py  cli.py  config.py  dbus_client.py  notifications.py  waybar.py
